[tool.poetry]
name = "NetEase-MusicBox"
packages = [
  {include = "NEMbox"},
]
version = "0.3.2"
# docs
authors = [
  "omi <4399.omi@gmail.com>",
  "Weiliang Li <to.be.impressive@gmail.com>",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Sound/Audio",
]
description = "A sexy command line interface musicbox"
keywords = ["music", "netease", "cli", "player"]
license = "MIT"
maintainers = [
  "omi <4399.omi@gmail.com>",
  "Weiliang Li <to.be.impressive@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/darknessomi/musicbox"

[tool.poetry.dependencies]
fuzzywuzzy = "^0.18.0"
importlib-metadata = "^4.0.0"
pycryptodomex = "^3.9.8"
python = "^3.9"
python-Levenshtein = "^0.12.0"
requests = "^2.24.0"
requests-cache = "^0.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", python = "^3.7"}
flake8 = "^4.0.0"
mypy = "^0.941"
pytest = "^7.0.0"

[tool.poetry.scripts]
musicbox = "NEMbox.__main__:start"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
